...
            android:textColor="#000000"
            android:textSize="30dp"
            android:textStyle="bold"/>

        <!-- Send Icon -->
        <ImageView
            android:id="@+id/chats"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/send" />
    </LinearLayout>

    <TextView
...
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:id="@+id/profile"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_profile"
                android:tint="@android:color/darker_gray" />

            <TextView
...
