...
        android:text="Forgot Password ?"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:textColor="#59442F"/>

    <Button
        android:id="@+id/loginsuccessful"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#59442F"
        android:text="Login"
        android:textColor="#FFFFFF"
        android:padding="12dp"
...
