...
                android:textColor="#000000"
                android:textSize="30dp"
                android:textStyle="bold"/>

            <!-- Done Button -->
            <TextView
                android:id="@+id/gotoprofile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Done"
                android:layout_marginLeft="130dp"
                android:textSize="15dp"
...
