...
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_marginHorizontal="16dp">

            <TextView
                android:id="@+id/followers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="500"
                android:textStyle="bold"
                android:textSize="16dp"
                android:textColor="#000000"/>
...
